# rust-burn-toy-example-implementation

./: .gitignore
neur_op_toy/: Cargo.toml
neur_op_toy/src/: main.rs
try_toy_example/: Cargo.toml
try_toy_example/src/: cheb_points.rs  interp.rs  lib.rs  main.rs  model.rs  nn_test.rs  plot.rs  scratch.rs  spectral.rs  train.rs  utils.rs
